--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ description: >
   <br><br>
   <a href="https://www.linkedin.com/in/salil-wadnerkar/">View My LinkedIn Profile</a> 
   
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
