--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,7 @@ baseURL = 'https://rohshall.github.io/'
 languageCode = 'en-us'
 title = 'Assorted tidbits'
 theme = 'ananke'
+[caches]
+[caches.images]
+dir = ':cacheDir/images'
+
